Cleaned up files. Deleted old photos. Added destinations list as source.

--- a/travel_bucket_start/package.json
+++ b/travel_bucket_start/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-spa-example",
+  "name": "travel-bucket",
   "version": "1.0.0",
-  "description": "",
+  "description": "A travel wish list app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
